--- a/hello.html
+++ b/hello.html
@@ -16,7 +16,7 @@
                 }
 			};
 			// GET 방식으로 요청을 보내면서 데이터를 동시에 전달함.
-			httpRequest.open("GET", "http://was-svc/hello", true);
+			httpRequest.open("GET", "http://svc-was/hello", true);
 			httpRequest.send();
 		}
 	</script>
